# ros2_ws

./: .gitignore  .gitmodules
install/: setup.bash  (+3 more)
src/ur_yt_sim/: CMakeLists.txt  package.xml  setup.py
src/ur_yt_sim/config/sdrf/: ur16e.srdf.xacro
src/ur_yt_sim/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/ur_yt_sim/install/ur_yt_sim/share/ur_yt_sim/: package.sh  package.zsh
src/ur_yt_sim/install/ur_yt_sim/share/ur_yt_sim/rviz/: ur16e_view.rviz  view_ur16e.rviz
src/ur_yt_sim/install/ur_yt_sim/share/ur_yt_sim/urdf/: ur16e_camera.urdf.xacro
src/ur_yt_sim/launch/: spawn_ur16e.launch.py  spawn_world.launch.py  ur16e_with_ev.launch.py  ur16e_with_moveit.launch.py  view_ur16e.launch.py
src/ur_yt_sim/log/: latest_build
src/ur_yt_sim/models/box_base/: model.config  model.sdf
src/ur_yt_sim/models/car_with_inlet_v1/: model.config  model.sdf
src/ur_yt_sim/models/car_with_inlet_v2/: model.config  model.sdf
src/ur_yt_sim/models/car_with_inlet_v3/: model.config  model.sdf
src/ur_yt_sim/models/car_with_inlet_v3/car_with_inlet_v3/: model.config  model.sdf
src/ur_yt_sim/models/inlet/: model.config  model.sdf
src/ur_yt_sim/models/plug/: model.config  model.sdf
src/ur_yt_sim/models/ur16e_base/: model.sdf
src/ur_yt_sim/src/: inlet_tracker.cpp
src/ur_yt_sim/ur_yt_sim/: add_car_to_scene.py
src/ur_yt_sim/urdf/: car_with_inlet.urdf  test.urd  ur16e_camera.urdf.xacro  ur16e_macro.xacro  ur16e_with_evcharger.urdf.xacro
src/ur_yt_sim/worlds/: empty_with_factory.world  world1.world  world2.world  world3.world  world4.world
(+268 files in other folders)
